Add Entity Framework Core for database support
Implemented Entity Framework Core in the ASP.NET Core application to enable database interactions. Updated `Startup.cs` to configure SQL Server connection and added services. Created `Country` and `Hotel` classes, along with `DetaBaseCountext` for managing database operations. Added migration files for `Countries` and `Hotels` tables. Updated `appsettings.json` with the SQL Server connection string and modified the project file to include necessary Entity Framework Core packages.

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -7,8 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "SQlconnection": 
-    "Server=DESKTOP-362VS4S;Database=TestNov DB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "SQlconnection": "Server=DESKTOP-362VS4S;Database=TestNov2DB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
